# pokemonian

./: Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  justfile  project_synopsis.md  pyproject.toml
poke/: crawler.py  database_interface.py  interface.py  main.py  poke_model.py
postgres_db_scripts/: env.py
postgres_db_scripts/versions/: 416f86497769_initial_creation.py
tests/: test_poke.py  test_poke_live_db.py
